// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe mostrar el componente con el titulo personalizado 1`] = `
<span
  className="productDescription undefined"
>
  prueba
</span>
`;

exports[`ProductTitle debe mostrar el componente con el titulo personalizado con clase 1`] = `
<span
  className="productDescription title-center"
>
  prueba
</span>
`;

exports[`ProductTitle debe mostrar el componente con nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    mug title
  </span>
</div>
`;
